--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3 class="text-xl font-extrabold text-green-900">Emergency <br> Service</h3>
         </section>
         <section class="flex justify-between gap-3">
-        <div class="flex justify-between gap-1 bg-green-50 px-11 items-center rounded-4xl">
+        <div class="flex justify-between gap-1 bg-green-50 px-13 items-center rounded-4xl">
             <div class="font-bold">0</div>
             <div><img src="assets/heart.png" alt="" class="w-7 h-7"></div>
         </div>
@@ -46,11 +46,11 @@
                         <p class="font-bold text-2xl">999</p>
                         <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -60,20 +60,20 @@
                 <div>
                    <div class="flex flex-col gap-3 w-100 h-80 p-7 bg-white rounded-2xl shadow-lg">
                     <section class="flex justify-between items-center">
-                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/emergency.png" alt="" class="w-8 h-8"></div>
+                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/police.png" alt="" class="w-8 h-8"></div>
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
+                        <p class="font-bold text-xl">Police Helpline Number</p>
+                        <p class="mb-5">Police</p>
                         <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Police</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -84,20 +84,20 @@
                 <div>
                     <div class="flex flex-col gap-3 w-100 h-80 p-7 bg-white rounded-2xl shadow-lg">
                     <section class="flex justify-between items-center">
-                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/emergency.png" alt="" class="w-8 h-8"></div>
+                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/fire-service.png" alt="" class="w-8 h-8"></div>
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
+                        <p class="font-bold text-xl">Fire Service Number</p>
+                        <p class="mb-5">fire-service</p>
                         <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Fire</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -110,20 +110,20 @@
                 <div>
                     <div class="flex flex-col gap-3 w-100 h-80 p-7 bg-white rounded-2xl shadow-lg">
                     <section class="flex justify-between items-center">
-                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/emergency.png" alt="" class="w-8 h-8"></div>
+                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/ambulance.png" alt="" class="w-8 h-8"></div>
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
-                        <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="font-bold text-xl">Ambulance Service</p>
+                        <p class="mb-5">Ambulance</p>
+                        <p class="font-bold text-2xl">1994-999999</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Health</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -138,16 +138,16 @@
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
-                        <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="font-bold text-xl">Women and Child Helpline</p>
+                        <p class="mb-5">Women and Child Helpline</p>
+                        <p class="font-bold text-2xl">109</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Help</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -162,16 +162,16 @@
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
-                        <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="font-bold text-xl">Anti-Corruption Helpline</p>
+                        <p class="mb-5">Anti-Corruption</p>
+                        <p class="font-bold text-2xl">106</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Govt.</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -188,16 +188,16 @@
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
-                        <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="font-bold text-xl">Electricity Helpline</p>
+                        <p class="mb-5">Electricity Outage</p>
+                        <p class="font-bold text-2xl">16216</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Electricity</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -208,20 +208,20 @@
                 <div>
                     <div class="flex flex-col gap-3 w-100 h-80 p-7 bg-white rounded-2xl shadow-lg">
                     <section class="flex justify-between items-center">
-                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/emergency.png" alt="" class="w-8 h-8"></div>
+                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/brac.png" alt="" class="w-8 h-8"></div>
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
-                        <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="font-bold text-xl">BRAC Helpline</p>
+                        <p class="mb-5">BRAC</p>
+                        <p class="font-bold text-2xl">16445</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">NGO</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
@@ -232,20 +232,20 @@
                 <div>
                     <div class="flex flex-col gap-3 w-100 h-80 p-7 bg-white rounded-2xl shadow-lg">
                     <section class="flex justify-between items-center">
-                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/emergency.png" alt="" class="w-8 h-8"></div>
+                        <div class="bg-pink-100 p-3 rounded-xl"><img src="assets/Bangladesh-Railway.png" alt="" class="w-8 h-8"></div>
                         <div><img src="assets/vecteezy_heart_1187989.png" alt="" class="w-6 h-6"></div>
                     </section>
                     <section>
-                        <p class="font-bold text-xl">National Emergency Number</p>
-                        <p class="mb-5">National Emergency</p>
-                        <p class="font-bold text-2xl">999</p>
-                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">All</p>
+                        <p class="font-bold text-xl">Bangladesh Railway Helpline</p>
+                        <p class="mb-5">Bangladesh Railway</p>
+                        <p class="font-bold text-2xl">163</p>
+                        <p class="mb-3 p-3 w-12 bg-gray-100 rounded-2xl">Travel</p>
                         <div class="flex justify-between">
-                            <button class="flex border border-grey-50 px-11 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
+                            <button class="flex border border-grey-50 px-13 py-1 bg-white text-black rounded-lg shadow hover:bg-black hover:text-white items-center">
                                 <img src="assets/—Pngtree—vector copy icon_4013516.png" alt="" class="w-5 h-5">
                                 <p>Copy</p>
                             </button>
-                        <button class="flex px-12 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
+                        <button class="flex px-15 py-1 bg-green-500 text-white rounded-lg shadow hover:bg-black items-center">
                             <img src="assets/—Pngtree—call sign_8908888.png" alt="" class="w-5 h-5">
                             <p>Call</p>
                         </button>
